register login done

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VITE_projectId=assetverse-71b43
 VITE_storageBucket=assetverse-71b43.firebasestorage.app
 VITE_senderId=180865258516
 VITE_appId=1:180865258516:web:37d047e3250323a53ac301
+
+VITE_IMGBB_KEY=4b20026a412c9f485874e375e32cab13
+
