--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
+    "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
